--- a/Application.ioc
+++ b/Application.ioc
@@ -156,18 +156,18 @@ PB11.GPIO_Label=Th_out
 PB11.Locked=true
 PB11.Signal=GPIO_Input
 PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=KEY_LEFT
+PB12.GPIO_Label=SW4
 PB12.Locked=true
 PB12.Signal=GPIO_Input
 PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=KEY_UP
+PB13.GPIO_Label=SW2
 PB13.Locked=true
 PB13.Signal=GPIO_Input
 PB2.Locked=true
 PB2.Mode=Single Bank 1 2IOs
 PB2.Signal=QUADSPI_CLK
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=KEY_ENTER
+PB5.GPIO_Label=SW1
 PB5.Locked=true
 PB5.Signal=GPIO_Input
 PB6.Mode=Single Bank 1 2IOs
@@ -178,24 +178,24 @@ PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB9.Locked=true
 PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=BLE_DIO12
+PC0.GPIO_Label=SW6
 PC0.Locked=true
 PC0.Signal=GPIO_Input
 PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=BLE_DIO13
+PC1.GPIO_Label=SW7
 PC1.Locked=true
 PC1.Signal=GPIO_Input
 PC10.Mode=Single Bank 1 2IOs
 PC10.Signal=QUADSPI_BK1_IO1
 PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=KEY_DOWN
+PC11.GPIO_Label=SW3
 PC11.Locked=true
 PC11.Signal=GPIO_Input
 PC12.Locked=true
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=KEY_RIGHT
+PC13.GPIO_Label=SW5
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -203,7 +203,7 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PC2.GPIO_Label=RWR
+PC2.GPIO_Label=SW8
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC2.Locked=true
 PC2.PinState=GPIO_PIN_SET
