Change the GPIO function of SW8 from output to input

--- a/Application.ioc
+++ b/Application.ioc
@@ -202,12 +202,10 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=SW8
-PC2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC2.Locked=true
-PC2.PinState=GPIO_PIN_SET
-PC2.Signal=GPIO_Output
+PC2.Signal=GPIO_Input
 PC3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC3.GPIO_Label=ERD
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
